test/param/promoted.runParam.good
promoted.chpl:16: error: unresolved call 'paramFun(range(int(64),bounded,false))'
promoted.chpl:9: note: this candidate did not match: paramFun(arg: int)
promoted.chpl:16: note: because actual argument #1 with type 'range(int(64),bounded,false)'
promoted.chpl:9: note: is passed to formal 'arg: int(64)'
